css/peopleofspice.css
/* ... */
.brand-image-2 {
  opacity: 1;
  width: 90px;
  margin-bottom: 21px;
  font-size: 160%;
}

.main-paragraph-4 {
  color: #fff;
  text-align: left;
  width: auto;
  margin-bottom: 0;
  font-family: Raleway, sans-serif;
  font-size: 20px;
  font-weight: 400;
  line-height: 20.83px;
}

.main-paragraph-4.center {
  color: var(--tan);
  text-align: left;
  font-family: Playfair Display, sans-serif;
  font-size: 20px;
  font-weight: 600;
  line-height: 1;
}

.main-paragraph-4.how-it-wroks {
  color: var(--white);
  font-size: 23px;
  font-weight: 300;
  line-height: 44px;
}

.enjoy-heading {
  color: var(--white);
  text-transform: capitalize;
  margin-bottom: 0;
  font-size: 10em;
  font-weight: 400;
  line-height: .9;
  position: absolute;
  inset: 0% 0% auto;
}

.enjoy-heading-wrap {
  text-align: right;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  width: 100%;
  height: 12.1em;
  display: block;
  position: absolute;
  inset: 0% 0% 0;
  overflow: hidden;
}

.overflow-image {
  width: 50%;
  position: relative;
  overflow: hidden;
}

.cover-shape-2 {
  opacity: 0;
  background-color: #fff;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0% 0 0% 0%;
}

.cover-shape-2._80 {
  width: 100%;
  height: 80%;
  top: auto;
}

.cover-shape-2._50 {
  background-color: #c1ae8e;
  width: 80%;
  bottom: auto;
}

.cover-shape-2._50.second {
  top: auto;
  bottom: 0;
  left: auto;
}

.cover-shape-2.second {
  background-color: #c1ae8e;
  width: 20%;
  inset: 0% 0% auto auto;
}

.cover-shape-2._20 {
  width: 100%;
  height: 20%;
  inset: 0% 0% auto;
}

.cover-shape-2.third {
  background-color: #c1ae8e;
  width: 80%;
}

.enjoy-wrap {
  margin-top: 20vh;
}

.how-it-works-grid {
  grid-column-gap: 16px;
  grid-row-gap: 52px;
  grid-template: "Area Area Area-2"
                 "Area-6 Area-6 Area-3"
                 "Area-4 Area-4 Area-4"
                 "Area-7 Area-7 Area-7"
                 / 1fr 1fr 2fr;
  grid-auto-flow: column;
}

.container-4 {
  background-color: #0000;
  width: 100%;
  max-width: 1600px;
  margin-left: auto;
  margin-right: auto;
}

.container-4.second {
  z-index: 2;
  max-width: 1200px;
  position: relative;
}

.main-heading-4 {
  color: #fff;
  text-align: left;
  margin-top: 0;
  margin-bottom: 10px;
  font-family: Playfair Display, sans-serif;
  font-size: 6em;
  font-weight: 400;
}

.main-heading-4.enjoy {
  margin-top: 0;
  font-size: 144px;
  line-height: 1;
  display: none;
  position: absolute;
  inset: 0% 7% auto auto;
}

.main-heading-4.card {
  text-align: left;
  background-color: #0000;
  justify-content: flex-start;
  align-items: center;
  font-family: Playfair Display, sans-serif;
  font-size: 23px;
  line-height: 1.4;
  display: flex;
}

.main-heading-4.price {
  text-align: left;
  letter-spacing: 0;
  margin-bottom: 6px;
  font-size: 1.1em;
  font-style: normal;
  line-height: 1;
}

.main-heading-4.menu {
  color: var(--white);
  width: auto;
  margin-bottom: 32px;
  font-size: 5vw;
  line-height: 1;
}

.how-it-work-section {
  padding-top: 200px;
  padding-left: 40px;
  padding-right: 40px;
  position: relative;
}

.text-span-8 {
  margin-left: 12px;
  font-family: Playfair Display, sans-serif;
  font-size: 120px;
  font-style: italic;
  font-weight: 400;
  line-height: 1;
}

.main-wrapper {
  flex-flow: column;
  min-height: 100vh;
  display: flex;
}

.background-noise {
  z-index: -1;
  opacity: .3;
  background-image: url('../images/noise.png');
  background-position: 0 0;
  background-size: auto;
  width: 100%;
  height: 100%;
  position: absolute;
  inset: 0%;
}

.content-section {
  z-index: 3;
  padding: 100px 3%;
  position: relative;
}

.recipe-detail {
  grid-column-gap: 5px;
  grid-row-gap: 5px;
  flex-flow: column;
  display: flex;
}

.container-5 {
  width: 100%;
  max-width: 1070px;
  margin-left: auto;
  margin-right: auto;
  display: block;
}

.collection-list-wrapper-2 {
  margin-top: 25px;
}

.list-article {
  font-size: 1.2em;
  line-height: 1.3;
}

.list-article h1 {
  font-size: 38px;
  line-height: 1.3;
}

.list-article h2 {
  font-size: 32px;
}

.list-article h3 {
  font-size: 24px;
}

.list-article h4 {
  font-size: 18px;
}

.list-article h5 {
  font-size: 14px;
}

.submit-button-3 {
  background-color: var(--tan);
  color: var(--body);
  border-radius: 50px;
  width: 100%;
  min-height: 52px;
  transition: all .3s;
}

.submit-button-3:hover {
  background-color: var(--white);
}

.line-break {
  color: var(--tan);
  background-color: #e8e8e8;
  width: 100%;
  height: 1px;
  margin-top: 45px;
  margin-bottom: 45px;
}

.ingredient-block {
  border: 1px #e8e8e8;
  border-radius: 32px;
  margin-top: 60px;
  overflow: hidden;
  box-shadow: 0 0 #0000, .1px .2px #0000000a, .2px .6px .1px #0000000d, .4px 1px .2px #0000000f, .6px 1.9px .7px #00000010, 1.1px 3.2px 1.5px #00000010, 1.9px 5.6px 3px #0001, 3.3px 9.5px 5.6px #0001, 5.7px 16.5px 10.4px #00000012, 10.3px 29.6px 19.4px #00000013, 20.4px 58.6px 39.7px #00000014;
}

.recipe-sticky {
  position: sticky;
  top: 40px;
}

.recipe-detail-block {
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.recipe-grid {
  grid-column-gap: 70px;
  grid-template-rows: auto;
  grid-template-columns: 2fr 1fr;
  width: 98vw;
  margin-left: auto;
  margin-right: auto;
}

.recipe-extra-item {
  margin-bottom: 20px;
}

.ingredient-content {
  background-color: #0a0a0a;
  margin-top: 40px;
  padding: 40px;
}

.ingredient-block-header {
  height: 50vh;
  min-height: 300px;
  max-height: 50vh;
  position: relative;
  overflow: hidden;
}

.heading-2 {
  margin-top: 0;
  font-size: 32px;
}

.recipe-list-block {
  grid-column-gap: 8px;
  grid-row-gap: 8px;
  flex-flow: column;
  justify-content: flex-start;
  align-items: flex-start;
  display: flex;
}

.recipe-detail-grid {
  grid-column-gap: 24px;
  grid-row-gap: 24px;
  grid-template-columns: 1fr 1fr 1fr;
}

.other-recipes {
  margin-bottom: 40px;
}
/* ... */

